# how-much-of-som-is-ai

./: Cargo.toml  README.md  flake.nix  model.kmeans  rebuild.nu
demo/: index.html
demo/src/: main.ts
inference-lib/: Cargo.toml
inference-lib/src/: lib.rs
inference-wasm/: Cargo.toml
inference-wasm-web/: index.html  package.json  vite.config.js
inference-wasm-web/src/: main.ts
inference-wasm-web/src/pkg/: sonai.d.ts  sonai.js  sonai_bg.js  sonai_bg.wasm  sonai_bg.wasm.d.ts
inference-wasm/src/: lib.rs
model/: Cargo.toml
sonai/: Cargo.toml  README.md  model.kmeans
sonai-metrics/: Cargo.toml
sonai-metrics/src/: lib.rs
sonai/src/: lib.rs
src/: devlogs.rs  lib.rs  main.rs  metrics.rs  model.rs  runner.rs  summer_of_making.rs
training-bin/: Cargo.toml  model.kmeans
training-bin/src/: main.rs  summer_of_making.rs
