[package]
name = "embed-som"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main" }
emojis = "0.7.0"
embed_anything = { version = "0.6.4", features = ["cuda"] }

futures = "0.3.31"
linfa = { version = "0.7.1", features = ["serde"] }
linfa-clustering = { version = "0.7.1", features = ["serde"] }
ndarray = "0.15.6"
once_cell = "1.21.3"

pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
rand = "0.9.2"
regex = "1.11.1"

reqwest = { version = "0.12.22", features = ["http2", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }

tokio = { version = "1.46.1", features = ["full"] }

unic-emoji-char = "0.9.0"
unicode-segmentation = "1.12.0"

linfa-nn = "0.7.2"
linfa-preprocessing = "0.7.1"
