[package]
name = "how-much-of-som-is-ai"
version = "0.2.0"
edition = "2024"

[dependencies]
linfa = { version = "0.7.1", default-features = false }
linfa-clustering = { version = "0.7.1", features = ["serde"] }
linfa-nn = "0.7.2"
linfa-linalg = { version = "0.2.1", default-features = false, features = ["iterative", "rand"] }
ndarray = { version = "0.15.6", default-features = false }

emojis = "0.7.0"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
unicode-segmentation = "1.12.0"

bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
linfa-preprocessing = "0.7.1"

# For Training Only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.98"
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main" }
# Embedding seems to degrade perf
# embed_anything = { version = "0.6.4", features = ["cuda"] }
# rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["http2", "json", "rustls-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"

# For WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hmosia"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--strip-debug", "--enable-bulk-memory-opt"]
