[workspace]
resolver = "3"
members = [
  "training-bin",   # Training, generates a model.kmeans and model.ai.cluster
  "inference-lib",  # Runs a model.kmeans and performs predictions
  "inference-wasm", "model", # Like inference-lib, but wrapped with wasm-bindgen for JS use
]

[workspace.dependencies]
linfa = { version = "0.7.1", default-features = false }
linfa-clustering = { version = "0.7.1", features = ["serde"] }
linfa-nn = "0.7.2"
ndarray = { version = "0.15.6", default-features = false }

bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
