[package]
name = "sonai"
version = "0.1.0"
edition = "2024"

[dependencies]
# Actual inference
linfa = { workspace = true }
linfa-clustering = { workspace = true }
linfa-nn = { workspace = true }
ndarray = { workspace = true }

model = { path = "../model" }

# Model loading
serde = { workspace = true }
bincode = { workspace = true }
once_cell = "1.21.3" # Lazy load the model

[lib]
crate-type = ["cdylib", "rlib"]
