[package]
name = "inference-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
sonai = { path = "../inference-lib" }
getrandom = { version = "0.2.16", features = ["js"] }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--strip-debug", "--enable-bulk-memory-opt"]
