[package]
name = "sonai_metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
linfa-clustering = { workspace = true }
linfa-nn = { workspace = true }
ndarray = { workspace = true }

emojis = "0.7.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
unicode-segmentation = "1.12.0"
serde = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
