[package]
name = "sonai"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Generic AI Text Detection for rust"

[dependencies]
# Actual inference
linfa = { workspace = true }
linfa-clustering = { workspace = true }
linfa-nn = { workspace = true }
ndarray = { workspace = true }

sonai_metrics = "0.1.0"

# Model loading
serde = { workspace = true }
bincode = { workspace = true }
once_cell = "1.21.3" # Lazy load the model

[lib]
crate-type = ["cdylib", "rlib"]
